[package]
name = "relationship-points"
version = "0.1.0"
authors = ["nate"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = ">0.0.0"
serde_derive = "1.0.20"
serde_json = "1.0.6"
diesel = { version = "0.16.0", features = ["sqlite"]}
diesel_codegen = { version = "0.16.0", features = ["sqlite"]}
dotenv = "0.9.0"