[package]
name = "relationship-points"
version = "0.1.0"
authors = ["nate"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
citadel-crud = "0.1.0"
rocket_cors = "0.2.3"
regex = "0.2"
serde = ">0.0.0"
serde_derive = "1.0.20"
serde_json = "1.0.6"
diesel = { version = "1.0.0-beta1", features = ["sqlite"]}
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite"]}
dotenv = "0.9.0"